fix: stabilize Echo systems for 0.4.1-alpha